[package]
name = "lighter-common"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[workspace]
resolver = "3"
members = ["derives", "macros"]

[features]
default = ["postgres"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
redis-cache = []

[dependencies]
lighter-common-derives = { workspace = true }
lighter-common-macros = { workspace = true }

actix = { workspace = true }
actix-cors = { workspace = true }
actix-web = { workspace = true }
awc = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
bincode = { workspace = true }
config = { workspace = true }

[workspace.dependencies]
lighter-common-derives = { path = "derives" }
lighter-common-macros = { path = "macros" }

actix = "0.13.5"
actix-cors = "0.7.1"
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }
awc = "3.8.1"
bs58 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
proc-macro2 = "1.0.103"
quote = "1.0.42"
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
syn = { version = "2.0.111", features = ["full"] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "chrono",
  "json",
  "serde",
  "serde_json",
  "tracing-serde",
] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
rustls = "0.23.35"
rustls-pemfile = "2.2.0"

# Error handling (CRITICAL per CLAUDE.md)
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (CRITICAL per CLAUDE.md)
tokio = { version = "1", features = ["full"] }

# Metrics (CRITICAL per CLAUDE.md)
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Concurrent collections
dashmap = "6"

# Lazy initialization
once_cell = "1.19"

# Pattern matching
regex = "1.10"

# Binary serialization
bincode = "1.3"

# Configuration management
config = "0.14"
